# route-planning

./: .gitignore  Justfile  README.md  compose.yaml  env.template  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
migrations/versions/: 1c8b4d9ec675_.py  2a9bf32a8c0e_.py  3225bd66f951_.py  51b0b12cd905_.py  6974a1941668_.py  88f141fcec83_.py  9e9a975ffe87_.py  a6d352562f81_.py  b033d3bc8f4e_.py  d831633e2b6a_.py  f36b744cfb2e_.py  ffa476fa4b1d_.py
route_planning/: __init__.py  auth.py  config.py  db.py  forms.py  models.py  run.py
route_planning/static/css/: output.css
route_planning/templates/: _footer.html  _navbar.html  _navigation.html  _pagination.html  base.html  index.html
route_planning/templates/auth/: login.html  register.html
route_planning/templates/company/: _form.html  company.html  details.html  edit.html
route_planning/templates/company/partials/: details.html
route_planning/templates/driver/: _form.html  add.html  edit.html  list.html
route_planning/templates/route/: _form.html  add.html  details.html  edit.html  list.html  route.html
route_planning/templates/vehicle/: _form.html  add.html  edit.html  list.html  vehicle.html
route_planning/templates/vehicle/partials/: list.html
route_planning/views/: auth.py  company.py  driver.py  main.py  route.py  vehicle.py
scripts/: bootstrap.py  curl-test.sh
